--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "file_metadata",
+  "name": "file-metadata-microservice",
   "version": "0.0.1",
   "description": "API project for freeCodeCamp",
   "main": "server.js",
@@ -14,7 +14,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/erickfb5/project-filemetadata.git"
+    "url": "https://github.com/erickfb5/file-metadata-microservice.git"
   },
   "keywords": [
     "node",
